--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
 <body>
     <form action="action_page.php">
         <div class="container">
-          <h1>Register</h1>
-          <p>Please fill in this form to create an account.</p>
+          <h1>Formulaire</h1>
           <hr>
       
           <label for="email"><b>Email</b></label>
